--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
-aiogram<3.0
-aiohttp==3.6.2
-aioredis<2.0
-python-dotenv
-Django>3.0
-psycopg2-binary
-jsonfield
+aiogram==2.19
+aiohttp==3.8.1
+aiosignal==1.2.0
+asgiref==3.5.0
+async-timeout==4.0.2
+attrs==21.4.0
+Babel==2.9.1
+certifi==2021.10.8
+charset-normalizer==2.0.12
+Django==3.2
+frozenlist==1.3.0
+idna==3.3
+multidict==6.0.2
+psycopg2==2.9.3
+python-dotenv==0.20.0
+pytz==2022.1
+sqlparse==0.4.2
+yarl==1.7.2
+
+
